<resources>
    <string name="app_name">QuickHire</string>
    <string name="app_tagline">Trusted help, right when you need it.</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="creating_account">Creating account...</string>
    <string name="verification_sent">Verification email sent to %s</string>
    <string name="verify_email_failed">Failed to send verification email</string>
    <string name="dont_have_account">Don\'t have an account? Signup</string>
    <string name="please_wait">Please wait</string>
    <string name="logging_in">Logging in...</string>
    <string name="verify_email">Please verify your email first</string>

    <string name="name_hint">Your Name</string>
    <string name="address_hint">Address</string>
    <string name="hours_hint">Hours Needed</string>
    <string name="phone_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="submit">Submit</string>
    <string name="current_location_selected">Current Location Selected</string>
    <string name="name_required">Name required</string>
    <string name="address_required">Address required</string>
    <string name="hours_required">Hours required</string>
    <string name="phone_required">Phone required</string>
    <string name="email_required">Email required</string>
    <string name="hire_success">Worker hired successfully!</string>
    <string name="hire_failed">Failed to hire worker</string>
    <string name="update_failed">Failed to update worker status</string>

    <string name="expiryTime">Expired</string>
    <string name="hired_by_you">Hired by You</string>
    <string name="currently_hired">Currently Hired</string>
    <string name="already_hired">Already Hired</string>
    <string name="worker_data_unavailable">Worker data not available</string>
    <string name="hourly_rate_format">PKR %.2f/hour</string>
    <string name="hiring_success">Successfully hired %s</string>
    <string name="hiring_failed">Hiring failed: %s</string>
    <string name="contact_information">Contact Information</string>
    <string name="hire_now">Hire Now</string>
    <string name="not_provided">Not provided</string>
    <string name="not_specified">Not specified</string>


        <!-- Categories -->
        <string name="maid_category">Maid</string>
        <string name="driver_category">Driver</string>
        <string name="chef_category">Chef</string>
        <string name="hairdresser_category">Hairdresser</string>
        <string name="tailor_category">Tailor</string>
        <string name="plumber_category">Plumber</string>

        <!-- Content descriptions -->
        <string name="maid_workers_list">List of available maids</string>
        <string name="driver_workers_list">List of available drivers</string>
        <string name="chef_workers_list">List of available chefs</string>
        <string name="hairdresser_workers_list">List of available hairdressers</string>
        <string name="tailor_workers_list">List of available tailors</string>
        <string name="plumber_workers_list">List of available plumbers</string>



    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>